--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tracksoft",
   "version": "0.1.0",
   "dependencies": {
+    "axios": "^1.7.2",
     "concurrently": "^8.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
