--- a/pyscreenshot/render.yaml
+++ b/pyscreenshot/render.yaml
@@ -1,11 +1,10 @@
 services:
   - type: web
-    name: fastapi-app
+    name: your-fastapi-app
     env: python
-    region: oregon
     plan: free
-    buildCommand: ""
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 8000
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     autoDeploy: true
     envVars:
       - key: CLOUDINARY_CLOUD_NAME
